@@ -1,3 +1,8 @@
+Sun Nov 25 18:51:16 GMT 2007  Ivan Shmakov  <oneingray@gmail.com>
+
+	* man/Rules.man: replace.sed lives in $(top_builddir)/man, not
+	  $(top_srcdir)/man.
+
 Sat Nov 24 10:45:50 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (make_roff_command): If the environment variable
